--- a/mobile/dalali_hub/pubspec.yaml
+++ b/mobile/dalali_hub/pubspec.yaml
@@ -35,10 +35,32 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  flutter_bloc: ^8.1.3 
+  freezed_annotation: ^2.4.1
+  json_serializable: ^6.7.1
+  retrofit: ^4.0.3
+  dio: ^5.3.3
+  get_it: ^7.6.4
+  injectable: ^2.3.2
+  json_annotation: ^4.8.1
+  shared_preferences: ^2.2.2
+  go_router: ^12.1.1
+  floor: ^1.4.2
+  sqflite: ^2.3.0
+
+
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.5
+  retrofit_generator: '>=7.0.0 <8.0.0'
+  injectable_generator: ^2.4.1
+  floor_generator: ^1.4.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -46,6 +68,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -56,7 +80,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
+  # uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
