--- a/mobile/dalali_hub/pubspec.yaml
+++ b/mobile/dalali_hub/pubspec.yaml
@@ -48,8 +48,7 @@ dependencies:
   json_annotation: ^4.8.1
   shared_preferences: ^2.2.2
   go_router: ^12.1.1
-  floor: ^1.4.2
-  sqflite: ^2.3.0
+  responsive_sizer: ^3.2.0
 
 
   
@@ -60,7 +59,6 @@ dev_dependencies:
   freezed: ^2.4.5
   retrofit_generator: '>=7.0.0 <8.0.0'
   injectable_generator: ^2.4.1
-  floor_generator: ^1.4.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -69,7 +67,6 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -80,7 +77,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  # uses-material-design: true
+  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
