--- a/mobile/dalali_hub/pubspec.yaml
+++ b/mobile/dalali_hub/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   sqflite: ^2.3.0
   flutter_svg: ^2.0.9
   responsive_sizer: ^3.2.0
+  image_picker: ^1.0.4
+
  
 
 
@@ -84,9 +86,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/illustrations/
+    - assets/logos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
