--- a/mobile/dalali_hub/pubspec.yaml
+++ b/mobile/dalali_hub/pubspec.yaml
@@ -84,9 +84,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/icons/
+    - assets/images/displays/
+    - assets/images/backgrounds/
+    - assets/images/illustrations/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
