--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,8 @@
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.5",
+    "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/winston": "^2.4.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -46,6 +48,8 @@
     "mongoose": "^7.6.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.7.2",
