--- a/mobile/dalali_hub/pubspec.yaml
+++ b/mobile/dalali_hub/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   responsive_sizer: ^3.2.0
   image_picker: ^1.0.4
   flutter_otp_text_field: ^1.1.1
+  dropdown_button2: ^2.3.9
 
  
 
