--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,6 @@
     "@types/node": "^18.16.0"
   },
   "dependencies": {
-    "ts-node": "^10.9.1",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
@@ -36,6 +35,7 @@
     "@types/winston": "^2.4.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.40.0",
     "cors": "^2.8.5",
@@ -56,6 +56,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tsoa": "^5.1.1",
     "winston": "^3.10.0"
   },
