--- a/mobile/dalali_hub/pubspec.yaml
+++ b/mobile/dalali_hub/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   image_picker: ^1.0.4
   flutter_otp_text_field: ^1.1.1
   dropdown_button2: ^2.3.9
+  range_slider_flutter: ^0.0.2
 
  
 
