--- a/mobile/dalali_hub/pubspec.yaml
+++ b/mobile/dalali_hub/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_otp_text_field: ^1.1.1
   dropdown_button2: ^2.3.9
   range_slider_flutter: ^0.0.2
+  cached_network_image: ^3.3.0
 
  
 
