--- a/mobile/dalali_hub/pubspec.yaml
+++ b/mobile/dalali_hub/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   dropdown_button2: ^2.3.9
   range_slider_flutter: ^0.0.2
   cached_network_image: ^3.3.0
+  url_launcher: ^6.2.2
+  carousel_slider: ^4.2.1
+  dots_indicator: ^3.0.0
 
  
 
