--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,9 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/jwk-to-pem": "^2.0.3",
     "@types/morgan": "^1.9.5",
+    "@types/node-jose": "^1.1.13",
     "@types/nodemailer": "^6.4.14",
     "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/winston": "^2.4.4",
@@ -44,10 +46,13 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.5",
     "mongodb-memory-server": "^8.15.1",
     "mongoose": "^7.6.5",
     "morgan": "^1.10.0",
+    "ms-typescript": "^2.0.0",
     "multer": "^1.4.5-lts.1",
+    "node-jose": "^2.2.0",
     "nodemailer": "^6.9.7",
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.1",
