--- a/mobile/dalali_hub/pubspec.yaml
+++ b/mobile/dalali_hub/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   url_launcher: ^6.2.2
   carousel_slider: ^4.2.1
   dots_indicator: ^3.0.0
+  realm: ^1.9.0
+  flutter_chat_ui: ^1.6.11
 
  
 
