--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,8 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "4.5.2"
   },
-  "peerDependencies": {
-    "@types/node": "^18.16.0"
-  },
   "dependencies": {
+    "tsconfig-paths": "^4.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
