--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "4.5.2"
   },
+  "peerDependencies": {
+    "@types/node": "^18.16.0"
+  },
   "dependencies": {
     "tsconfig-paths": "^4.2.0",
     "@types/bcrypt": "^5.0.0",
