--- a/backend/package.json
+++ b/backend/package.json
@@ -18,15 +18,10 @@
     "eslint": "^8.48.0",
     "jest": "^29.6.4",
     "prettier": "3.0.2",
-    "tsconfig-paths": "^4.2.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "4.5.2"
   },
-  "peerDependencies": {
-    "@types/node": "^18.16.0"
-  },
   "dependencies": {
-    "tsconfig-paths": "^4.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
@@ -69,7 +64,7 @@
   "scripts": {
     "build": "tsc -p .",
     "test": " && exit 1",
-    "start": "nodemon src/index.ts",
+    "start": "ts-node -r tsconfig-paths/register src/index.ts",
     "dev": "nodemon",
     "lint": "npx eslint src test",
     "lint:fix": "npm run lint -- --fix",
