--- a/mobile/dalali_hub/pubspec.yaml
+++ b/mobile/dalali_hub/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.2.5 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -60,9 +60,9 @@ dependencies:
   url_launcher: ^6.2.2
   carousel_slider: ^4.2.1
   dots_indicator: ^3.0.0
-  realm: ^1.9.0
-  flutter_chat_ui: ^1.6.11
-  flutter_native_splash: ^2.3.10
+  realm: ^1.6.0
+  flutter_native_splash: ^2.3.7
+  flutter_chat_ui: ^1.6.12
 
  
 
@@ -70,8 +70,6 @@ dependencies:
   
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   freezed: ^2.4.5
   retrofit_generator: '>=7.0.0 <8.0.0'
   injectable_generator: ^2.4.1
@@ -83,6 +81,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
+  source_gen: ^1.5.0
+  floor_generator: ^1.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
