--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.48.0",
     "jest": "^29.6.4",
     "prettier": "3.0.2",
+    "tsconfig-paths": "^4.2.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "4.5.2"
   },
@@ -52,7 +53,7 @@
     "nodemailer": "^6.9.7",
     "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.1",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.14",
     "socket.io": "^4.7.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
