--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "@onesignal/node-onesignal": "^2.0.1-beta2",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
